k8s/qa-enterprise-search-manifest/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-fe-es-search-qastage01
  namespace: fe-es-search-qastage01
  labels:
    app: kroolo-es-qastage01
    version: blue
spec:
  selector:
    matchLabels:
      app: kroolo-es-qastage01
      version: blue
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: kroolo-es-qastage01
        version: blue
    spec:
      containers:
      - name: blue-container
        image: 315855795699.dkr.ecr.us-east-2.amazonaws.com/qastage01-es-search:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20
          failureThreshold: 3
