k8s/qa-enterprise-search-manifest/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-fe-es-search-qastage01
  namespace: fe-es-search-qastage01
  labels:
    app: kroolo-es-qastage01
    version: green
spec:
  selector:
    matchLabels:
      app: kroolo-es-qastage01
      version: green
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: kroolo-es-qastage01
        version: green
    spec:
      containers:
      - name: green-container
        image: 315855795699.dkr.ecr.us-east-2.amazonaws.com/qastage01-es-search:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
